fix spacing for .btn-primary in .toolbar

--- a/app/assets/stylesheets/_monsoon_theme.scss
+++ b/app/assets/stylesheets/_monsoon_theme.scss
@@ -215,6 +215,7 @@ section {
 
   .btn-primary {
     float: right;
+    margin-left: 5px;
   }
 }
 
